<resources>
    <string name="app_name">Button Game</string>
    <string name="about_text_1">
        Hello, my name is Markos Kapnakis. I made this simple button masher game for my assignment in mobile development at IEK Galatsiou
    </string>
    <string name="about_text_2">
        The rules are simple:\n\n
        \t&#8226; Tapping the good bread gives you +1 points\n
        \t&#8226; Tapping the evil bread gives you -1 points\n
        \t&#8226; You have 1 minute to tap the good bread as many times as you can
    </string>
    <string name="about_text_3">
        This project ended up being far more complicated than it needed to be all things considered,
        but I wanted to have fun with ti and thought I should upload it on my <a href="https://github.com/ArceusLegend/button_game">GitHub</a>.
        with all the source code and credits for the art I used
    </string>
    <string name="text_hint">If you can\'t view this text, go the <a href="https://github.com/ArceusLegend/button_game">github repo</a></string>
    <string name="time_up">Time up!</string>
    <string name="click_any_of_the_breads_to_start">Click any of the breads to start…</string>
    <string name="time_left">"Time left: "</string>
    <string name="current_score">"Current score: "</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="try_again">Try again</string>
    <string name="top_scores">Top 5 scores</string>
    <string name="clear">Clear scores</string>
    <string name="menu">Back to menu</string>
    <string name="play">Play</string>
    <string name="your_top_5_scores">Your top 5 scores</string>
</resources>