<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_background"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="92dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="20dp"
                android:autofillHints="text"
                android:ems="10"
                android:hint="@string/text_hint"
                android:text="@string/about_text_1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView_2"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints="text"
                android:ems="10"
                android:hint="@string/text_hint"
                android:text="@string/about_text_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints="text"
                android:ems="10"
                android:hint="@string/text_hint"
                android:text="@string/about_text_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>